# maki

./: .gitignore  Cargo.toml  Makefile  README.md
.claude/: settings.local.json
src/: cache.rs  cli.rs  executor.rs  fuzzy.rs  main.rs  makefile.rs  prompt.rs  target.rs
