[package]
name = "maki"
version = "0.1.0"
edition = "2021"
description = "A cross-platform fuzzy Makefile task finder"
license = "MIT"
authors = ["Cesar Ferreira"]
repository = "https://github.com/cesarferreira/maki"
keywords = ["makefile", "make", "fuzzy", "cli", "task-runner"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
clap = { version = "4", features = ["derive"] }
regex = "1"
skim = "0.20"
anyhow = "1"
walkdir = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
colored = "3"
sha2 = "0.10"
hex = "0.4"
dirs = "6"
syntect = "5.3"

[dev-dependencies]
tempfile = "3"
